Sat Feb 11 06:00:48 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* dir.c (fnmatch): The * needs to be escaped to avoid formatting in
	  fnmatch comment.
	  patched by @dalton. https://github.com/ruby/ruby/pull/91

Fri Feb 10 03:41:31 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c: removed external encoding setter, allow parser
	  to be reused.
	* ext/psych/lib/psych/parser.rb: added external encoding setter.
	* test/psych/test_parser.rb: test parser reuse

Fri Feb 10 01:30:41 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/dl.h (ALIGN_OF): use offsetof().

	* ext/dl/dl.h (DLALIGN): round up at once and get rid of overflow.

Fri Feb 10 00:47:07 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (assert_no_memory_leak): new assertion to
	  check memory leak by invoking child ruby process and watch its
	  memory size.

Thu Feb  9 23:41:44 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/pathname/test_pathname.rb (test_binread): add assertion to
	  check encoding.

Thu Feb  9 16:48:19 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/dl.c (Init_dl): fix mangled document.

Thu Feb  9 16:10:34 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/memory_status.rb (Memory::Win32): 64bit support.

Thu Feb  9 16:08:55 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/lib/value.rb (DL::ValueUtil.{unsigned_value,signed_value}):
	  currently pack/unpack does not accept "q!" and "Q!".

Thu Feb  9 16:01:29 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/fiddle/conversions.c (value_to_generic): src is not guaranteed as
	  a Bignum if the type is LONG_LONG.  it may be a Fixnum if the value
	  is small.

Thu Feb  9 11:32:36 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/lib/types.rb: Win64 support.

Thu Feb  9 04:12:29 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/pathname/test_pathname.rb: not read but binread.
	  patched by Benoit Daloze, [ruby-core:42440] [Bug #5984]
